--- a/src/data/application.json
+++ b/src/data/application.json
@@ -1,6 +1,6 @@
 [
  {
-  "application_id": "f657b26a-7f31-4bb0-a627-795f3cdfe55b",
+  "application_id": "018ab303-69eb-41c2-98ed-18e30f14c834",
   "name": "Vim",
   "name_e": "",
   "name_r": "",
@@ -17,10 +17,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "8.2.3401",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "cbc7f101-d6f4-4125-bfef-ba73f5c5b98a",
+  "application_id": "05d6dc36-ccbc-496a-add8-d3792c9a992d",
   "name": "GIMP",
   "name_e": "",
   "name_r": "",
@@ -37,10 +37,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "2.10.28",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "ca299df9-0cb5-46dd-a380-50c4a0feef15",
+  "application_id": "32f1b0a7-db4e-4a71-9779-b3f4fa94dced",
   "name": "Adobe Photoshop",
   "name_e": "",
   "name_r": "",
@@ -57,10 +57,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "2022",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "d0fa6c16-4dec-465f-856d-f24326a36e10",
+  "application_id": "289003fe-b245-4c6b-9cf2-f8c4f73adc89",
   "name": "Inkscape",
   "name_e": "",
   "name_r": "",
@@ -77,10 +77,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "1.1",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "7c3a823c-254b-41e0-b308-846127782fd0",
+  "application_id": "482d7111-9865-4c8d-8dbe-573678a8fdd7",
   "name": "Unity",
   "name_e": "",
   "name_r": "",
@@ -97,10 +97,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "2020.3.19f1",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "cf375800-2853-484e-afd5-8927775efc6d",
+  "application_id": "be4a28e1-1d63-4f34-821b-7ebab5c2758d",
   "name": "Pygame",
   "name_e": "",
   "name_r": "",
@@ -117,10 +117,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "2.0.1",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "6411bb43-8eb4-4ecb-9d95-f596c151dca4",
+  "application_id": "1e44cfef-5cf4-49b4-9ae3-1e2ba9d40a43",
   "name": "Panda3D",
   "name_e": "",
   "name_r": "",
@@ -137,10 +137,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "1.10.11",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "24bfa63c-ab77-42ed-85d4-a3c0f5d08ea4",
+  "application_id": "284e272d-a5ad-411f-80c5-4f452cae7b52",
   "name": "React",
   "name_e": "",
   "name_r": "",
@@ -157,10 +157,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "17.0.2",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "a02b2a90-03b4-439e-9478-b478c8c30f7e",
+  "application_id": "1ac09ed7-62a0-4ac8-afc6-adcfa0ae6cf7",
   "name": "Vue.js",
   "name_e": "",
   "name_r": "",
@@ -177,10 +177,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "3.2.29",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "f36d65a2-b71e-45a6-8e0c-1396e8330445",
+  "application_id": "5292ca1c-37aa-41f3-8c38-84a4a3d64051",
   "name": "Selenium",
   "name_e": "",
   "name_r": "",
@@ -197,10 +197,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "4.1.0",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "f3564a82-be12-48e9-a643-7fb95e402761",
+  "application_id": "906f6956-5493-43ab-81e7-c6c9f888cc19",
   "name": "Swing",
   "name_e": "",
   "name_r": "",
@@ -217,10 +217,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Java 16",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "b3a4bbbc-12b5-48ca-83bf-9c198d433cd2",
+  "application_id": "0c6173c8-052b-4feb-aa5f-86eee3cf77a6",
   "name": "Ursina",
   "name_e": "",
   "name_r": "",
@@ -237,10 +237,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "5.2.0",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "43226fc1-da2b-46ae-85dc-727e82a92f84",
+  "application_id": "e7b0703f-cb4e-4bb5-94cf-769c951d5698",
   "name": "GlassFish",
   "name_e": "",
   "name_r": "",
@@ -257,10 +257,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "5.1.0",
-  "applicationtype_id": "a3d6621e-2cae-4ec1-becb-ad5ff492b682"
+  "applicationtype_id": "dc9ebe1a-19aa-49f5-8124-fca81d1bdb78"
  },
  {
-  "application_id": "a1dd9757-fafe-4471-845e-3f8d9cfe80db",
+  "application_id": "1eb1f987-11dc-479c-b962-e7e1c30f819b",
   "name": "Tomcat7",
   "name_e": "",
   "name_r": "",
@@ -277,10 +277,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "7.0.107",
-  "applicationtype_id": "a3d6621e-2cae-4ec1-becb-ad5ff492b682"
+  "applicationtype_id": "dc9ebe1a-19aa-49f5-8124-fca81d1bdb78"
  },
  {
-  "application_id": "e34a1a46-2c98-4474-8d5e-0616bad23c04",
+  "application_id": "08d773e4-693d-4ac9-b918-090311982e34",
   "name": "Word",
   "name_e": "",
   "name_r": "",
@@ -297,10 +297,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Microsoft Word 2021",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "63936b16-a507-49b1-9107-217568841d21",
+  "application_id": "97aeb451-4d81-47cb-95aa-3cd1bf410f4f",
   "name": "Excel",
   "name_e": "",
   "name_r": "",
@@ -317,10 +317,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Microsoft Excel 2021",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "99c6e037-97d4-491c-b565-6eb69527504f",
+  "application_id": "71f499fc-4b12-4d6f-9ae0-87411d431070",
   "name": "PowerPoint",
   "name_e": "",
   "name_r": "",
@@ -337,10 +337,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Microsoft PowerPoint 2021",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "2e96483d-62e9-4f41-8e15-dfa99ba2fd06",
+  "application_id": "8f26eb44-5eb1-45ec-a10f-631ed16ba362",
   "name": "Access",
   "name_e": "",
   "name_r": "",
@@ -357,10 +357,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Microsoft Access 2021",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "d2258357-ef18-4abb-933d-c2c38b24ece8",
+  "application_id": "b1981d36-a14b-49d6-8d1e-41bd8d22d9a3",
   "name": "Outlook",
   "name_e": "",
   "name_r": "",
@@ -377,10 +377,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Microsoft Outlook 2021",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "49995569-9d58-43df-b14b-a461cc584e39",
+  "application_id": "49ce5df5-8e6e-4c3b-90b0-374b72187e0e",
   "name": "HTML",
   "name_e": "",
   "name_r": "",
@@ -397,10 +397,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "HTML5",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "a5a586f2-e9ca-446b-a1c2-63e120c3a01b",
+  "application_id": "6f9c4221-523c-4c86-abc5-471c18d33374",
   "name": "CSS",
   "name_e": "",
   "name_r": "",
@@ -417,10 +417,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "CSS3",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "3ac9aa3f-7812-4213-91d7-30a61d7e7b32",
+  "application_id": "3cabee7c-c4fa-4e97-83cf-3074325769cc",
   "name": "SCSS",
   "name_e": "",
   "name_r": "",
@@ -437,10 +437,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "SCSS",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "0b10b097-4f10-4c30-bc11-d04c9b5362ab",
+  "application_id": "c9739e96-5d26-477c-b6cf-2c91b675aac6",
   "name": "JavaScript",
   "name_e": "",
   "name_r": "",
@@ -457,10 +457,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "ES12",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "16f1b530-4d59-4dbe-b262-23e72486401d",
+  "application_id": "5128227e-8068-4a7e-a7e1-98c75c2585a7",
   "name": "TypeScript",
   "name_e": "",
   "name_r": "",
@@ -477,10 +477,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "4.4",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "8735347f-9c12-46a9-b559-97346a671274",
+  "application_id": "6d0fdb06-ab2a-49ba-b36f-4ada604c3cbf",
   "name": "PHP",
   "name_e": "",
   "name_r": "",
@@ -497,10 +497,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "8.1",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "1a2b61da-e3f5-46df-8f37-f6774d479a71",
+  "application_id": "36c67d8e-db26-4259-8a7b-a57e8cd4ee46",
   "name": "Java",
   "name_e": "",
   "name_r": "",
@@ -517,10 +517,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "17",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "53b1c410-f62b-4e1b-b83a-cce2538923e7",
+  "application_id": "5fa587a9-2c02-4d4e-9f47-18195c86ab44",
   "name": "Python",
   "name_e": "",
   "name_r": "",
@@ -537,10 +537,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "3.10",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "3cac3f0e-3bdb-47ac-bb03-63cfd80229dd",
+  "application_id": "e7c0baba-7070-4eac-891f-56311075fff5",
   "name": "MySQL",
   "name_e": "",
   "name_r": "",
@@ -557,10 +557,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "8.0",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "87b3f252-edd6-43cb-a85a-38db0d3fe7be",
+  "application_id": "7b0756a3-bd8f-43a2-b3b1-a5c1b11020a5",
   "name": "C#",
   "name_e": "",
   "name_r": "",
@@ -577,10 +577,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "10.0",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "b99be752-d241-4f7b-9591-8ec598d469cc",
+  "application_id": "0047d71c-300d-4dc6-9420-91459947bb64",
   "name": "Bash",
   "name_e": "",
   "name_r": "",
@@ -597,10 +597,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "Bash 5.1.8",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "a327370c-6ade-44f9-8c7c-2e89f9bb42c7",
+  "application_id": "b2a06aad-2745-47b1-98d5-a97916d2fed6",
   "name": "FreeMarker",
   "name_e": "",
   "name_r": "",
@@ -617,10 +617,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "2.3.31",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "3003cd28-7858-4728-9a40-e5662c78ac8d",
+  "application_id": "e87cae95-1814-4b63-9492-2dbe3b840b9b",
   "name": "PostgreSQL",
   "name_e": "",
   "name_r": "",
@@ -637,10 +637,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "14.0",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "1fa26ef6-17cb-46d2-add8-60c872d3738a",
+  "application_id": "9477396c-4747-4dc7-88f4-24db054f2ccd",
   "name": "Ableton Live 10",
   "name_e": "",
   "name_r": "",
@@ -657,10 +657,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "10.1.30",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "56de9311-0eaf-426d-aa99-c017ce59244d",
+  "application_id": "fd901ccb-1a49-45ca-8df0-429b4bda8e23",
   "name": "FL Studio",
   "name_e": "",
   "name_r": "",
@@ -677,10 +677,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "20.8.4",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "491e61b9-63b1-42fc-bf99-5db686106725",
+  "application_id": "9e49d237-1609-4497-8b74-f0c361749266",
   "name": "Magnolia",
   "name_e": "",
   "name_r": "",
@@ -697,10 +697,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "6.2.4",
-  "applicationtype_id": "c3ddc04a-75da-45f3-8a32-ea8b76b5255d"
+  "applicationtype_id": "8f1c371a-5adb-450b-baea-e78d973b9b3a"
  },
  {
-  "application_id": "07e4c84b-353d-486b-a87e-6a82aa560113",
+  "application_id": "61edccb7-0032-4c84-8c39-1ef6d9912791",
   "name": "JCR",
   "name_e": "",
   "name_r": "",
@@ -717,10 +717,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "2.0",
-  "applicationtype_id": "f4343673-84c1-4ca1-b413-8804c97527d3"
+  "applicationtype_id": "a0f6bc9a-e7b6-49b8-a8a2-2605a387a52b"
  },
  {
-  "application_id": "2936c639-9908-4fca-82d2-ee9e1bdc1936",
+  "application_id": "af2c9936-c251-4de0-b2ab-13f6b6aa0817",
   "name": "Docker",
   "name_e": "",
   "name_r": "",
@@ -737,10 +737,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "20.10.7",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "8346b84e-3937-48d2-824a-2c6b1323a75a",
+  "application_id": "5efa5d0a-0008-44c6-b88c-6316615b98ca",
   "name": "Schema Markup",
   "name_e": "",
   "name_r": "",
@@ -757,10 +757,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "4.2",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
  },
  {
-  "application_id": "909c2080-a449-4b36-b1a3-b96f6e69a8bb",
+  "application_id": "66841906-6934-4eae-827d-744176513d91",
   "name": "Firebase",
   "name_e": "",
   "name_r": "",
@@ -777,10 +777,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "9.3.0",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "ddeadd27-bd39-4402-a9cb-50cf52c83fba",
+  "application_id": "081a69a8-a60c-40a6-959b-d226022baed2",
   "name": "Blender",
   "name_e": "",
   "name_r": "",
@@ -797,10 +797,10 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "3.0",
-  "applicationtype_id": "9f8c3e74-9f77-47f7-91d6-b495665f24a1"
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  },
  {
-  "application_id": "e00bc2b7-307a-40ea-ad72-5fa2892f58cb",
+  "application_id": "f5958c14-bdc8-420b-9258-c3d2d430d3de",
   "name": "Angular",
   "name_e": "",
   "name_r": "",
@@ -817,6 +817,26 @@
   "keywords_e": "",
   "keywords_r": "",
   "version": "12.2.5",
-  "applicationtype_id": "573dd147-7b44-4b77-948f-32019a9a43ae"
+  "applicationtype_id": "ecb42bb0-7478-42f2-9fa3-e4b75a858de2"
+ },
+ {
+  "application_id": "b48f1455-1881-489e-b5fa-e6c4fbc805a4",
+  "name": "Regex",
+  "name_e": "",
+  "name_r": "",
+  "description": "Regex ist eine Abkürzung für regulärer Ausdruck und bezieht sich auf Muster oder Vorlagen, die zur Suche und Manipulation von Zeichenketten in Texten verwendet werden.",
+  "description_e": "",
+  "description_r": "",
+  "thumbnail": "",
+  "image": "",
+  "url": "https://regex101.com/",
+  "alternatename": "Regular Expression",
+  "alternatename_e": "",
+  "alternatename_r": "",
+  "keywords": "Regex, regulärer Ausdruck, Muster, Vorlagen, Zeichenketten, Text",
+  "keywords_e": "",
+  "keywords_r": "",
+  "version": "",
+  "applicationtype_id": "0ad120d1-78c7-4ecb-a497-79065a84ee12"
  }
 ]
