--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ngxs/store": "^3.8.0",
+    "ng": "^0.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "underscore": "^1.13.6",
