--- a/src/data/applicationtype.json
+++ b/src/data/applicationtype.json
@@ -1,46 +1,46 @@
 [
  {
-  "applicationtype_id": "784666ac-8432-47d4-9748-5af0139d553a",
+  "applicationtype_id": "b814f66f-bd8f-4751-9c9a-c67b8a97a138",
   "name": "Programmiersprache",
   "name_e": "Programming language",
   "name_r": "",
-  "description": "",
+  "description": "Eine Programmiersprache ist eine formale Sprache, die entwickelt wurde, um Computerprogramme zu erstellen.",
   "description_e": "",
   "description_r": ""
  },
  {
-  "applicationtype_id": "b5c85897-9532-4fd0-8368-007a5eb1141b",
+  "applicationtype_id": "96fdad6b-4819-4354-acd2-fe6c71c07811",
   "name": "Umgebung",
   "name_e": "Environment",
   "name_r": "",
-  "description": "",
+  "description": "Eine Umgebung bezieht sich auf den Satz von Ressourcen, in dem Software ausgeführt wird.",
   "description_e": "",
   "description_r": ""
  },
  {
-  "applicationtype_id": "b7dc0c99-5e5d-4f45-8a58-8fd643370d89",
+  "applicationtype_id": "544a5e00-04fe-455d-948e-7f579dee6c35",
   "name": "Applikation",
   "name_e": "Application",
   "name_r": "",
-  "description": "",
+  "description": "Eine Applikation ist ein Computerprogramm oder eine Softwareanwendung, die bestimmte Aufgaben oder Funktionen ausführt.",
   "description_e": "",
   "description_r": ""
  },
  {
-  "applicationtype_id": "d59a0682-9793-47b1-b905-21e46823ee31",
+  "applicationtype_id": "c64006d1-6d53-465b-a6e9-017d1161549b",
   "name": "Rahmenwerk",
   "name_e": "Framework",
   "name_r": "",
-  "description": "",
+  "description": "Ein Rahmenwerk ist ein unterstützendes Strukturkonzept, das bei der Entwicklung von Softwareanwendungen verwendet wird.",
   "description_e": "",
   "description_r": ""
  },
  {
-  "applicationtype_id": "ff10b4ac-7ca5-4884-ba9c-6477c24ec93a",
+  "applicationtype_id": "877ce3d2-8358-4f22-a822-883881851fa2",
   "name": "Inhaltsverwaltungssystem",
   "name_e": "Content Management System",
   "name_r": "",
-  "description": "",
+  "description": "Ein Inhaltsverwaltungssystem (CMS) ist eine Software, die verwendet wird, um digitale Inhalte zu erstellen, zu bearbeiten, zu organisieren und zu veröffentlichen, insbesondere in Bezug auf Websites und Blogs.",
   "description_e": "",
   "description_r": ""
  }
