--- a/src/data/application.json
+++ b/src/data/application.json
@@ -527,7 +527,7 @@
     "description": "Python ist eine interpretierte Hochsprachen-Programmiersprache, die Code-Lesbarkeit und Benutzerfreundlichkeit betont.",
     "description_e": "",
     "description_r": "",
-    "thumbnail": "icons/psython.svg",
+    "thumbnail": "icons/python.svg",
     "image": "",
     "url": "https://www.python.org/",
     "alternatename": "Python 3",
