--- a/src/data/knowledge.json
+++ b/src/data/knowledge.json
@@ -1,133 +1,133 @@
 [
  {
-  "knowledge_id": "33cad432-2d67-4b1f-a487-cf8f9d302eba",
+  "knowledge_id": "dc24e7d7-720b-40da-b553-6afe58467636",
   "name": "Web Accessibility",
   "name_e": "",
   "name_r": "",
   "description": "Web Accessibility bezieht sich auf die Praktiken und Technologien, die verwendet werden, um Websites für Menschen mit Behinderungen zugänglicher zu machen.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/accessibility.svg",
+  "thumbnail": "assets/icons/accessibility.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "b32b1192-d62a-47f7-893c-86f6e3feb5be",
+  "knowledge_id": "7942243b-555a-4ce1-812b-a34334e3be40",
   "name": "SEO",
   "name_e": "",
   "name_r": "",
   "description": "SEO (Search Engine Optimization) umfasst Techniken und Strategien, um die Sichtbarkeit einer Website in Suchmaschinen zu erhöhen.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/seo.svg",
+  "thumbnail": "assets/icons/seo.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "9fef3710-cd16-4a55-a64b-c58370f4d683",
+  "knowledge_id": "bcfff209-38c2-4936-828e-899f403b65ca",
   "name": "Mathematik",
   "name_e": "",
   "name_r": "",
   "description": "Mathematik ist die Wissenschaft der Zahlen, Mengen und Formen und wird in vielen Bereichen wie Wissenschaft, Technologie, Wirtschaft und Finanzen angewendet.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/math.svg",
+  "thumbnail": "assets/icons/math.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "8508bd52-8154-4e31-94c9-30e32bd28dc1",
+  "knowledge_id": "fc3c2ea0-7bf6-4763-906d-e7d26a8d97a3",
   "name": "Geschichte",
   "name_e": "",
   "name_r": "",
   "description": "Geschichte ist die wissenschaftliche Untersuchung von Vergangenheit und Gegenwart, einschließlich der Entwicklungen von Gesellschaften, Kulturen und Ereignissen.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/history.svg",
+  "thumbnail": "assets/icons/history.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "04c261cb-e679-4e23-9563-d2d8265efb1c",
+  "knowledge_id": "ad71ba58-75dd-4201-bb00-5efac0b4ca47",
   "name": "Philosophie",
   "name_e": "",
   "name_r": "",
   "description": "Philosophie ist die Untersuchung grundlegender Konzepte wie Wahrheit, Existenz, Wissen, Werte, Moral und Ethik.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/philosophy.svg",
+  "thumbnail": "assets/icons/philosophy.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "801fbf89-dc42-42c9-8bae-94b4a8fc806f",
+  "knowledge_id": "cbaf82da-af22-4a30-8f55-20e701cd423f",
   "name": "Politik",
   "name_e": "",
   "name_r": "",
   "description": "Politik befasst sich mit der Organisation und Entscheidungsfindung von Gruppen und Gesellschaften, insbesondere der Regierung und des Staates.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/politics.svg",
+  "thumbnail": "assets/icons/politics.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "6a42b6a4-8eed-49f5-999f-7347723fdd73",
+  "knowledge_id": "3a3612e2-e776-444d-83f2-fd6074e98ab0",
   "name": "Geographie",
   "name_e": "",
   "name_r": "",
   "description": "Geographie befasst sich mit der Erde, einschließlich ihrer Landschaften, ihrer Bewohner und ihrer Phänomene wie Klima und Umwelt.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/geography.svg",
+  "thumbnail": "assets/icons/geography.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "5d41273e-6926-40b0-a2ea-f9486c49638c",
+  "knowledge_id": "eb192760-3021-4120-a322-6b5a1887239f",
   "name": "Biologie",
   "name_e": "",
   "name_r": "",
   "description": "Biologie ist die Wissenschaft des Lebens und der lebenden Organismen, einschließlich Pflanzen, Tiere und Mikroorganismen.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/biology.svg",
+  "thumbnail": "assets/icons/biology.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "7104109a-bac3-4d79-887c-79e4613b4cdc",
+  "knowledge_id": "5b04c7a4-4800-4ba7-8c41-81aa73afb9cc",
   "name": "Chemie",
   "name_e": "",
   "name_r": "",
   "description": "Chemie ist die Wissenschaft der Materie, ihrer Eigenschaften und ihrer Reaktionen.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/chemistry.svg",
+  "thumbnail": "assets/icons/chemistry.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "c3e6787f-417a-430b-bf8c-7136013a22ce",
+  "knowledge_id": "3cd4edb1-b6f3-4d1c-a775-dbcf6cc3d139",
   "name": "Physik",
   "name_e": "",
   "name_r": "",
   "description": "Physik ist die Wissenschaft der Materie und Energie und deren Wechselwirkungen in der Welt um uns herum.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/physics.svg",
+  "thumbnail": "assets/icons/physics.svg",
   "image": "",
   "url": ""
  },
  {
-  "knowledge_id": "24fc80f0-652c-4fc9-80f9-c2907717a3ad",
+  "knowledge_id": "ffa81737-abd3-4827-8361-b668e13c31b8",
   "name": "Hauswirtschaft",
   "name_e": "",
   "name_r": "",
   "description": "Hauswirtschaft bezieht sich auf die Fähigkeiten und Kenntnisse, die zur Bewältigung alltäglicher Aufgaben im Haushalt erforderlich sind, wie Kochen, Reinigen und Organisieren.",
   "description_e": "",
   "description_r": "",
-  "thumbnail": "icons/housekeeping.svg",
+  "thumbnail": "assets/icons/housekeeping.svg",
   "image": "",
   "url": ""
  }
