--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "bundle-report": "webpack-bundle-analyzer --port 4200 dist/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -34,12 +35,14 @@
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.15.11",
     "@types/underscore": "^1.11.4",
+    "gzipper": "^7.2.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "webpack-bundle-analyzer": "^4.9.0"
   }
 }
