--- a/src/data/project.json
+++ b/src/data/project.json
@@ -1,6 +1,6 @@
 [
  {
-  "project_id": "9961373e-aabb-4495-b7c6-31078bed41fe",
+  "project_id": "7e8814dc-c723-4177-928d-aafb0ec15137",
   "name": "Produktvergleich",
   "name_e": "",
   "name_r": "",
@@ -18,10 +18,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "540037b0-4292-4233-96cd-4e690469f925",
+  "project_id": "3296a410-434a-4ebf-9931-19d9a5ecf22f",
   "name": "ID Altersverifikation",
   "name_e": "",
   "name_r": "",
@@ -39,10 +39,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "f371eb74-9abc-45b0-a376-76220a9319aa",
+  "project_id": "f76ce856-0344-4452-8fff-ff739a8233bb",
   "name": "Produzentenseite",
   "name_e": "",
   "name_r": "",
@@ -60,10 +60,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "cbda68ae-361c-45dd-86f2-6b7fd7a9b189",
+  "project_id": "b86eb3f7-353c-4f99-9843-fa4623dbd177",
   "name": "SCSS Skript",
   "name_e": "",
   "name_r": "",
@@ -81,10 +81,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "d6ff1405-7edb-4d69-aa28-50cf37daa85e",
+  "project_id": "2f1a86ba-913e-4905-8dbc-68f2e43e2e03",
   "name": "Übersetzungsskript",
   "name_e": "",
   "name_r": "",
@@ -102,10 +102,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "56367638-942c-402d-842f-611fd058be4c",
+  "project_id": "44502209-ce33-44e2-8f12-06fc9245b0a0",
   "name": "Testen mittels Selenium",
   "name_e": "",
   "name_r": "",
@@ -123,10 +123,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "d4053254-2213-4934-8a45-2415cf0c1f5d",
+  "project_id": "90264bca-8e6d-4790-a4da-30adb0edec7e",
   "name": "i18n",
   "name_e": "",
   "name_r": "",
@@ -144,10 +144,10 @@
   "relevance_health": "",
   "anon_locked": true,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "32e71769-0018-4643-aa36-efe483c74076",
+  "project_id": "ec5bf053-552a-4acb-87a2-795f1d8ef208",
   "name": "Passwort zurücksetzen",
   "name_e": "",
   "name_r": "",
@@ -165,10 +165,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "74f39758-b987-4fae-b347-8f6055aebc79",
+  "project_id": "8994d6cd-cb3e-4597-8478-d1f7662f57b7",
   "name": "Share Buttons",
   "name_e": "",
   "name_r": "",
@@ -186,10 +186,10 @@
   "relevance_health": "",
   "anon_locked": true,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "b93b1209-f31e-46cd-82ca-0119b5d2fa80",
+  "project_id": "f9f97804-f170-40bc-ab09-56adfbfc3e7a",
   "name": "SEO Analyse",
   "name_e": "",
   "name_r": "",
@@ -207,10 +207,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "9ac576f9-66fa-4e90-a500-86d0f3e7c13b",
+  "project_id": "3b075de6-9666-4588-a5e6-ccd61de65ec1",
   "name": "Geschmacksprofil",
   "name_e": "",
   "name_r": "",
@@ -228,10 +228,10 @@
   "relevance_health": "",
   "anon_locked": true,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "3e32785e-b27d-4cca-b439-1fde0dedb907",
+  "project_id": "e5bccd9f-4eba-4bce-8f7b-e1039215a880",
   "name": "Popup",
   "name_e": "",
   "name_r": "",
@@ -249,10 +249,10 @@
   "relevance_health": "",
   "anon_locked": true,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "c7633af8-68f9-49ac-842b-ce5a3b99f390",
+  "project_id": "5a39e9a6-b60b-4bc1-887f-da3a78c2405b",
   "name": "Konfigurationsseiten Magnolia",
   "name_e": "",
   "name_r": "",
@@ -270,10 +270,10 @@
   "relevance_health": "",
   "anon_locked": true,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "477b9dff-7423-4637-8792-cf2db16a0d03",
+  "project_id": "84a955b8-96fc-404f-aece-9eb42299b011",
   "name": "Webseiten aufsetzen",
   "name_e": "",
   "name_r": "",
@@ -291,10 +291,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "43ce3d94-ab19-42c3-81ab-4266228309ef",
+  "project_id": "d89a24b8-b811-4b83-8ae9-d08ce799c977",
   "name": "Webseiten warten",
   "name_e": "",
   "name_r": "",
@@ -312,10 +312,10 @@
   "relevance_health": "",
   "anon_locked": true,
   "client_id": "",
-  "career_id": "74bfecb6-191d-42e4-a4cc-6b43d303ef63"
+  "career_id": "49da009d-ac2d-470a-bead-aea29be94c65"
  },
  {
-  "project_id": "f50b35bb-2675-4735-8847-b7ddb33a4487",
+  "project_id": "defa70a1-6a94-4b11-9020-a3e278590811",
   "name": "Webscraping automatisation",
   "name_e": "",
   "name_r": "",
@@ -333,11 +333,32 @@
   "relevance_health": "",
   "anon_locked": "",
   "client_id": "",
-  "career_id": "3c40be9d-c0ee-49d4-a771-07e350fb69e8"
+  "career_id": "62acdc52-6c62-4d49-8ecf-8c172b5b6852"
  },
  {
-  "project_id": "a95990e3-2bfe-4c8f-a257-8ab2db37e9c4",
+  "project_id": "4ac0eb85-c2f6-403a-bd7f-1a140afc14ac",
   "name": "Portfolio",
+  "name_e": "",
+  "name_r": "",
+  "description": "Das ist diese Seite, auf welcher du dich gerade befindest.",
+  "description_e": "",
+  "description_r": "",
+  "url": "https://portfolio-shevoroshkin-georgiy.web.app/",
+  "thumbnail": "",
+  "image": "assets/content/projects/it/web/cv/",
+  "github": "https://github.com/omega-800/cv-angular",
+  "date": "2023-06-17T22:00:00.000Z",
+  "relevance_it": 27,
+  "relevance_education": "",
+  "relevance_art": "",
+  "relevance_health": "",
+  "anon_locked": false,
+  "client_id": "",
+  "career_id": ""
+ },
+ {
+  "project_id": "494ffded-6f4c-47a9-95a8-86f6fb926f2b",
+  "name": "Portfolio (alt)",
   "name_e": "",
   "name_r": "",
   "description": "Für die Bewerbungsphase nach der Informatikmittelschule entwickelte ich eine Portfolio-Webseite. Dies war die alte Version der jetzigen Seite.",
@@ -348,7 +369,7 @@
   "image": "assets/content/projects/it/web/cv_old/",
   "github": "https://github.com/omega-800/curriculum-vitae-typescript",
   "date": "2019-06-19T22:00:00.000Z",
-  "relevance_it": 27,
+  "relevance_it": 20,
   "relevance_education": "",
   "relevance_art": "",
   "relevance_health": "",
@@ -357,7 +378,7 @@
   "career_id": ""
  },
  {
-  "project_id": "b91a764a-09c3-458d-97ed-c01ddf0ce462",
+  "project_id": "961fa682-31a9-48a4-af53-b0d15193cb59",
   "name": "Finanzplaner",
   "name_e": "",
   "name_r": "",
@@ -378,7 +399,7 @@
   "career_id": ""
  },
  {
-  "project_id": "296cfab6-5b64-40a6-9144-5241e1971525",
+  "project_id": "4f02cb83-4f1f-4b08-82eb-d0cf4b295b6f",
   "name": "Textbasiertes Spiel Python",
   "name_e": "",
   "name_r": "",
@@ -399,7 +420,7 @@
   "career_id": ""
  },
  {
-  "project_id": "9031e751-021e-45a2-b796-9448846c0486",
+  "project_id": "b5af64bb-26de-401a-86ad-f43152645bb5",
   "name": "Textbasiertes Spiel C#",
   "name_e": "",
   "name_r": "",
@@ -420,7 +441,7 @@
   "career_id": ""
  },
  {
-  "project_id": "6175ab04-1d80-4dc6-b369-d64049552620",
+  "project_id": "90bf3589-6c75-4205-8de9-3b881ae43dc2",
   "name": "Roguelike Dungeon Spiel",
   "name_e": "",
   "name_r": "",
@@ -441,7 +462,7 @@
   "career_id": ""
  },
  {
-  "project_id": "f9171140-823d-4367-905c-3009834c0f3e",
+  "project_id": "cd7275d1-6b4c-4c18-bf0d-c5e4a40c9279",
   "name": "Roguelike Dungeon Spiel 2",
   "name_e": "",
   "name_r": "",
@@ -462,7 +483,7 @@
   "career_id": ""
  },
  {
-  "project_id": "4660f4ca-af45-4122-a9f2-2fc459cdaee2",
+  "project_id": "65061c84-ef7a-4c93-a7a5-a73799fdc957",
   "name": "Raketen Spiel",
   "name_e": "",
   "name_r": "",
@@ -483,7 +504,7 @@
   "career_id": ""
  },
  {
-  "project_id": "538b5127-6c97-4f11-9437-f44550bc51b3",
+  "project_id": "1f78b8c5-6620-43e0-bb1f-7ad41af94faa",
   "name": "Textbasiertes Spiel Java",
   "name_e": "",
   "name_r": "",
@@ -504,7 +525,7 @@
   "career_id": ""
  },
  {
-  "project_id": "9735ebbc-44d1-4706-9879-191987169be1",
+  "project_id": "38c08b87-1a8c-48db-9bb7-b1fdb37b8eb8",
   "name": "Java UNO Spiel",
   "name_e": "",
   "name_r": "",
@@ -522,10 +543,10 @@
   "relevance_health": "",
   "anon_locked": false,
   "client_id": "",
-  "career_id": "baa3c7e6-aa28-4e87-866b-6cf2ac3f7989"
+  "career_id": "21b71f20-c790-416b-8610-fce243d9cb07"
  },
  {
-  "project_id": "b42df2f8-fd42-4684-aaba-e5b657a74421",
+  "project_id": "38b0fb62-05db-4af9-b31c-457836afe523",
   "name": "Immobilien Webseite",
   "name_e": "",
   "name_r": "",
@@ -542,11 +563,11 @@
   "relevance_art": "",
   "relevance_health": "",
   "anon_locked": true,
-  "client_id": "fd48a0bb-ac23-4e77-a90d-6cba4b2b9b57",
+  "client_id": "775db51e-a9a9-46a7-a242-2b31d7c964eb",
   "career_id": ""
  },
  {
-  "project_id": "5fb16051-0120-452c-9aff-be7b19397cee",
+  "project_id": "43270423-3073-48aa-b0bb-470f6a92115a",
   "name": "RusFrauenTreff Webseite",
   "name_e": "",
   "name_r": "",
@@ -563,11 +584,11 @@
   "relevance_art": "",
   "relevance_health": "",
   "anon_locked": true,
-  "client_id": "2e898271-134e-4e24-ba1a-c62522acf63b",
+  "client_id": "6b0c0389-05c6-47c4-8c39-e0f4bc2521a5",
   "career_id": ""
  },
  {
-  "project_id": "099f1f9f-368f-46f1-9d1a-8122f87ca27f",
+  "project_id": "c5e038e6-be8d-4358-9575-8d8fb23496a9",
   "name": "Teddy",
   "name_e": "",
   "name_r": "",
@@ -588,7 +609,7 @@
   "career_id": ""
  },
  {
-  "project_id": "014f41d1-ed8c-4412-9b14-0e5a3a92f6b0",
+  "project_id": "c856c838-8f7d-4efd-990d-b4b082ff8cb1",
   "name": "Tie Dye",
   "name_e": "",
   "name_r": "",
@@ -609,7 +630,7 @@
   "career_id": ""
  },
  {
-  "project_id": "1492d5f0-8353-40e8-9132-f533953f16ff",
+  "project_id": "1879ab32-8f0f-4704-918b-d4d76330ad20",
   "name": "Portemonnaie",
   "name_e": "",
   "name_r": "",
@@ -630,7 +651,7 @@
   "career_id": ""
  },
  {
-  "project_id": "52628458-939c-4aa1-a763-9cc8a2323c1a",
+  "project_id": "3ce4999b-ee59-4e38-916c-08230824f8df",
   "name": "Pullover",
   "name_e": "",
   "name_r": "",
@@ -651,7 +672,7 @@
   "career_id": ""
  },
  {
-  "project_id": "79432cae-892d-40bb-844f-8ea6558a7c84",
+  "project_id": "195a4a30-0eec-4ac0-bef0-688738e2498b",
   "name": "Heavy Metal Veste",
   "name_e": "",
   "name_r": "",
@@ -672,7 +693,7 @@
   "career_id": ""
  },
  {
-  "project_id": "bf87ed49-6890-4022-a71b-177beeca0239",
+  "project_id": "6710bf3f-33c1-41ee-9ff9-ed9cf5d6f069",
   "name": "Punk Pullover",
   "name_e": "",
   "name_r": "",
@@ -693,7 +714,7 @@
   "career_id": ""
  },
  {
-  "project_id": "0d0d4107-d28e-437d-955e-cc3052d22eff",
+  "project_id": "92b88e7f-c347-4e3b-beea-f7d7888de4db",
   "name": "Holzbesteck",
   "name_e": "",
   "name_r": "",
@@ -714,7 +735,7 @@
   "career_id": ""
  },
  {
-  "project_id": "c4795f43-6872-48c6-9a53-ea93bb66b721",
+  "project_id": "7ddb2450-0ce5-4a56-8b9f-f51343b815c3",
   "name": "Holzohrenring",
   "name_e": "",
   "name_r": "",
@@ -735,7 +756,7 @@
   "career_id": ""
  },
  {
-  "project_id": "b6ada7fa-a991-4832-b831-52bf0bbbe390",
+  "project_id": "ba98abd2-71ec-4915-abd3-2576897ccefb",
   "name": "Turnsack und Seemannssack",
   "name_e": "",
   "name_r": "",
@@ -756,7 +777,7 @@
   "career_id": ""
  },
  {
-  "project_id": "4b55f07c-c7b8-4619-94aa-4ed59962409c",
+  "project_id": "6a1222d0-be66-4481-a60e-c5221c38ba8b",
   "name": "Legales Graffiti",
   "name_e": "",
   "name_r": "",
@@ -777,7 +798,7 @@
   "career_id": ""
  },
  {
-  "project_id": "ee5be727-bc8c-40af-b589-132f75661510",
+  "project_id": "61392827-58b6-4f7c-8dc3-ddaebb404a2c",
   "name": "Kusudama",
   "name_e": "",
   "name_r": "",
@@ -798,7 +819,7 @@
   "career_id": ""
  },
  {
-  "project_id": "50fb217d-a97a-4788-b584-b0ee59942356",
+  "project_id": "64da1b53-0743-4b4b-ac4e-82a463ee7fe4",
   "name": "Origami",
   "name_e": "",
   "name_r": "",
@@ -819,7 +840,7 @@
   "career_id": ""
  },
  {
-  "project_id": "50e7656b-b082-4f77-a3c9-82375915628a",
+  "project_id": "b682c11c-6f32-424a-afe0-e6e07c62ce7e",
   "name": "Zeichnungen",
   "name_e": "",
   "name_r": "",
@@ -840,7 +861,7 @@
   "career_id": ""
  },
  {
-  "project_id": "0fb8ebd0-a44d-40e6-8649-210912eefac8",
+  "project_id": "9c7a7c8f-a2dd-47ce-902c-244c0bef5b89",
   "name": "Mosaik",
   "name_e": "",
   "name_r": "",
@@ -861,7 +882,7 @@
   "career_id": ""
  },
  {
-  "project_id": "df44c657-5359-44fe-8330-6706e05a8743",
+  "project_id": "d6d64638-6daa-4278-9044-67e51b307531",
   "name": "Katzenbaum",
   "name_e": "",
   "name_r": "",
@@ -882,7 +903,7 @@
   "career_id": ""
  },
  {
-  "project_id": "49ea259d-f01a-434e-a7d5-e154da565dfd",
+  "project_id": "a7efac30-c66a-4688-a56a-2f859a567ee0",
   "name": "Malen",
   "name_e": "",
   "name_r": "",
@@ -903,7 +924,7 @@
   "career_id": ""
  },
  {
-  "project_id": "ceafd388-3e72-4a92-946d-35498b7661e0",
+  "project_id": "05917f45-a0c6-47a5-aa67-fee06d852dea",
   "name": "Gitarre",
   "name_e": "",
   "name_r": "",
@@ -924,7 +945,7 @@
   "career_id": ""
  },
  {
-  "project_id": "f3bed81c-0636-4ea8-9051-ec9278ab1431",
+  "project_id": "9b1f16e6-2940-427d-ae0b-7ed2deaf9644",
   "name": "Bass",
   "name_e": "",
   "name_r": "",
@@ -945,7 +966,7 @@
   "career_id": ""
  },
  {
-  "project_id": "1055c42b-2f62-47d8-b6bc-5ea76f9c8842",
+  "project_id": "28f99371-a7e2-49c2-9f72-15f3bbc9a524",
   "name": "Schlagzeug",
   "name_e": "",
   "name_r": "",
@@ -966,7 +987,7 @@
   "career_id": ""
  },
  {
-  "project_id": "ba95d4a4-4ffb-4454-89e2-920975694a86",
+  "project_id": "a7ed3a19-ede7-4b72-b200-b703dda83e30",
   "name": "Ableton",
   "name_e": "",
   "name_r": "",
@@ -987,7 +1008,7 @@
   "career_id": ""
  },
  {
-  "project_id": "fd163a32-a9c1-46d5-b876-ef1879dd104e",
+  "project_id": "d6b70468-5b1a-4bf5-a3bf-b62fead095c6",
   "name": "FL Studio",
   "name_e": "",
   "name_r": "",
@@ -1008,7 +1029,7 @@
   "career_id": ""
  },
  {
-  "project_id": "77c37ac1-c9d9-4add-827a-c5c86340f2a5",
+  "project_id": "848fb6bf-b461-462d-a94b-4fc3f3586b20",
   "name": "Faden",
   "name_e": "",
   "name_r": "",
@@ -1029,7 +1050,7 @@
   "career_id": ""
  },
  {
-  "project_id": "b41de1a0-77e1-4872-9092-876e0e7034a0",
+  "project_id": "19d5cd90-b26f-40d3-91d9-e74eec1ea6e9",
   "name": "CEVI",
   "name_e": "",
   "name_r": "",
@@ -1050,7 +1071,7 @@
   "career_id": ""
  },
  {
-  "project_id": "fb16bc27-e3a7-476d-9ca0-67e94c0b380f",
+  "project_id": "9ec69adf-bfb7-4575-80d9-70e188069f57",
   "name": "Fahrrad",
   "name_e": "",
   "name_r": "",
@@ -1071,7 +1092,7 @@
   "career_id": ""
  },
  {
-  "project_id": "b1d3b966-18e0-4856-9701-3de2eb5de14a",
+  "project_id": "c4ec0ec5-fba4-4935-a00d-66db72ac1991",
   "name": "Volleyball",
   "name_e": "",
   "name_r": "",
@@ -1092,7 +1113,7 @@
   "career_id": ""
  },
  {
-  "project_id": "14169a8c-b217-45cd-ab1b-078574ed70df",
+  "project_id": "877c0174-a711-4c46-a6fb-9cf1eea95054",
   "name": "Skateboard",
   "name_e": "",
   "name_r": "",
@@ -1113,7 +1134,7 @@
   "career_id": ""
  },
  {
-  "project_id": "b3f62a06-e46b-4453-bf35-2f3ad3d50172",
+  "project_id": "c1aa2228-d152-46cf-a3eb-7fe9eb047b12",
   "name": "Tischtennis",
   "name_e": "",
   "name_r": "",
@@ -1134,7 +1155,7 @@
   "career_id": ""
  },
  {
-  "project_id": "20da66d5-e6f8-4cf0-a6cb-aaa4c8217e79",
+  "project_id": "02f7b37e-6bd4-40e5-917d-d72aac71620f",
   "name": "Campen",
   "name_e": "",
   "name_r": "",
@@ -1155,7 +1176,7 @@
   "career_id": ""
  },
  {
-  "project_id": "cd5488a5-6524-480c-9d0a-3216276c550d",
+  "project_id": "acfb4f7a-f1fe-40d6-84ac-7ac824575de2",
   "name": "Wandern",
   "name_e": "",
   "name_r": "",
@@ -1176,7 +1197,7 @@
   "career_id": ""
  },
  {
-  "project_id": "b88c7804-bbcd-4da3-90ac-caf6c1feea90",
+  "project_id": "57fd8353-22c3-460e-aadd-cf36c8496f4b",
   "name": "Kochen",
   "name_e": "",
   "name_r": "",
@@ -1197,7 +1218,7 @@
   "career_id": ""
  },
  {
-  "project_id": "070c3286-c0ed-497d-8f3d-6c8c2cec3bb7",
+  "project_id": "9e3506ae-7b1d-4263-ab41-722e98bbbf09",
   "name": "Lebkuchen",
   "name_e": "",
   "name_r": "",
