--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ngxs/store": "^3.8.0",
+    "@vitalets/google-translate-api": "^9.2.0",
     "firebase": "^9.21.0",
     "ng": "^0.0.0",
     "rxjs": "~7.8.0",
